scenario-4-onboard-new-portal-with-authentication/approach_1/yaml/istio/jwt/01_requestauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-rhsso-ge
  namespace: prod-istio-system
spec:
  selector:
    matchLabels:
      app: ge-ingressgateway
  jwtRules:
    - issuer: >-
        https://keycloak-rhsso.apps.<CLUSTERNAME>.<BASEDOMAIN>/auth/realms/servicemesh-lab
      jwksUri: >-
        https://keycloak-rhsso.apps.<CLUSTERNAME>.<BASEDOMAIN>/auth/realms/servicemesh-lab/protocol/openid-connect/certs
