scenario-4-onboard-new-portal-with-authentication/approach_1/yaml/istio/jwt/02_authpolicy_allow_from_servicemesh-lab_realm.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authpolicy-ge
  namespace: prod-istio-system
spec:
  selector:
    matchLabels:
      app: ge-ingressgateway
  action: ALLOW
  rules:
  # https://istio.io/latest/docs/reference/config/security/conditions/
  - from:
    - source:
        requestPrincipals: ['*']
    when:
    - key: request.auth.claims[iss]
      values: ["https://keycloak-rhsso.apps.<CLUSTERNAME>.<BASEDOMAIN>/auth/realms/servicemesh-lab"]
#    - key: request.auth.claims[email]
#       values:
#      - gtouser@gto.com
#      - another@email.com
